delete body copy

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="details">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quisquam repudiandae eveniet debitis non sequi similique inventore tempore labore reiciendis vero maiores a, cum voluptas voluptate, alias nesciunt consequatur? Aperiam?
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem delectus, ea quae perferendis beatae, a hic dicta nisi eveniet perspiciatis nam cumque harum odio in natus excepturi sequi, asperiores tenetur?
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum dolorem iusto facilis deserunt at ad, perferendis aspernatur illo consectetur eligendi natus, impedit labore maxime nesciunt! A dicta aperiam incidunt commodi.
+                Lort consectetur adipisicing elit. Cum dolorem iusto facilis deserunt at ad, perferendis aspernatur illo consectetur eligendi natus, impedit labore maxime nesciunt! A dicta aperiam incidunt commodi.
             </div>
             
         </section>
