Add more project page

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -24,16 +24,17 @@
                 <span class="like">I Like to craft fun and solid frontend product with good user experiences</span>
                 
             </p>
+            <nav id="nav-items">
+                <a href="../index.html">Home</a>
+                <a href="#">Project Maslow</a>
+                <a href="../Pages/project3.html">Project Optus</a>
+                <a href="../Pages/contact.html">Contact</a>
+            </nav>
         </div>
         
     </header>
     <main>
-        <nav id="nav-items">
-            <a href="../index.html">Home</a>
-            <a href="#">Project Maslow</a>
-            <a href="../Pages/project3.html">Project Optus</a>
-            <a href="../Pages/contact.html">Contact</a>
-        </nav>
+  
         <section>
             <div class="myhead">
                <img src="../images/project1.png" >
@@ -136,24 +137,23 @@
         </section>
 </main3> 
    
-   
-    <footer>
-     <div class="social-media">
-        <a href="https://www.linkedin.com"target="_blank">
-        <i class="fa-brands fa-linkedin"></i>
-    </a>
-    <a href="https://www.gitub.com" target="_blank">
-        <i class="fa-brands fa-github"></i>
-        </a>
-        <a href="http://wwww.facebook.com" target="_blank">
-            <i class="fa-brands fa-facebook"></i>
+<footer>
+    <div class="social-media">
+       <a href="https://www.linkedin.com/in/ming-xie-a4ab5a13/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_appm"target="_blank">
+       <i class="fa-brands fa-linkedin"></i>
+   </a>
+   <a href="https://github.com/MINGxe" target="_blank">
+       <i class="fa-brands fa-github"></i>
+       </a>
+       <a href="https://www.facebook.com/ming.xie.146/" target="_blank">
+           <i class="fa-brands fa-facebook"></i>
 
-        </a>
-     </div>   
-     <div class="info">
-        <p>Contact: 04000000</p>
-        <p>Address: 0 Street, Suburb</p>
-     </div>
-    </footer>
+       </a>
+    </div>   
+    <div class="info">
+       <p>Contact: 0412438214</p>
+       <p>Address: Epping NSW</p>
+    </div>
+   </footer>
 </body>
 </html>
