--- a/index.html
+++ b/index.html
@@ -53,7 +53,21 @@
             <span class="aboutme">About Me</span>
         </p>
         <div class="aboutmecopy">
-            Hi, My name is Ming. I am formally a graphic designer that is transferring into the world of UX. So not just designing something that looks cool, but also design something that is useful, meaningful, and delightful for people to interact with. During my sprint project development. I working collaboratively with lots of professionals such as architects & marketing experts along with the double diamond process taking products all the way from discovering, define, develop, to deliver. I think the important thing is that when we work together, you get something that is really passionate, something that stands out, and something that really works hard for your brand & business. </div>
+            Hi, My name is Ming. I am formally a graphic designer that is transferring into the world of UX. So not just designing something that looks cool, but also design something that is useful, meaningful, and delightful for people to interact with. During my sprint project development. I working collaboratively with lots of professionals such as architects & marketing experts along with the double diamond process taking products all the way from discovering, define, develop, to deliver. I think the important thing is that when we work together, you get something that is really passionate, something that stands out, and something that really works hard for your brand & business.
+        </div>
+
+        <div class="aboutmecopy">
+My Name: Ming Xie<br>
+My Email: mxgunshot@hotmail.com<br><br><br>
+
+Work Experience: <br><br>
+UI/UX DESIGNER<br>
+Cloudtronics / Full-time / Australia / May 2021-Present<br><br>
+UI/UX DESIGNER<br>
+Optus sprint project / Contract / Australia / Sept 2020 – Sept 2020<br><br>
+GRAPHIC DESIGNER<br>
+Tempo Australia / Contract / Australia / May 2014 – Aug 2015
+</div>
      </main2>  
      <main3>     
         <article>
@@ -62,7 +76,7 @@
             alt="project1">
         </section>
         <section>
-            <h3>PROJECT 1</h3>
+            <a href="./pages/project1.html">Project Maslow</a>
         </section>
     </article>
     <article>
@@ -71,7 +85,37 @@
             alt="project2">
         </section>
         <section>
-            <h3>PROJECT2</h3>
+            <a href="./pages/project3.html">Project Optus</a>
+        </section>
+    </article>
+
+    <article>
+        <section>
+            <img class="services-image" src="images/O1.png"
+            alt="project2">
+        </section>
+        <section>
+            <a href="./pages/project4.html">Project Optus</a>
+        </section>
+    </article>
+
+    <article>
+        <section>
+            <img class="services-image" src="images/O1.png"
+            alt="project2">
+        </section>
+        <section>
+            <a href="./pages/project5.html">Project Optus</a>
+        </section>
+    </article>
+
+    <article>
+        <section>
+            <img class="services-image" src="images/O1.png"
+            alt="project2">
+        </section>
+        <section>
+            <a href="./pages/project6.html">Project Optus</a>
         </section>
     </article>
     
@@ -80,20 +124,20 @@
    
     <footer>
      <div class="social-media">
-        <a href="https://www.linkedin.com"target="_blank">
+        <a href="https://www.linkedin.com/in/ming-xie-a4ab5a13/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_appm"target="_blank">
         <i class="fa-brands fa-linkedin"></i>
     </a>
-    <a href="https://www.gitub.com" target="_blank">
+    <a href="https://github.com/MINGxe" target="_blank">
         <i class="fa-brands fa-github"></i>
         </a>
-        <a href="http://wwww.facebook.com" target="_blank">
+        <a href="https://www.facebook.com/ming.xie.146/" target="_blank">
             <i class="fa-brands fa-facebook"></i>
 
         </a>
      </div>   
      <div class="info">
-        <p>Contact: 04000000</p>
-        <p>Address: 0 Street, Suburb</p>
+        <p>Contact: 0412438214</p>
+        <p>Address: Epping NSW</p>
      </div>
     </footer>
 </body>
